--- a/war/ProjectControllingSystem.html
+++ b/war/ProjectControllingSystem.html
@@ -43,7 +43,7 @@
 			<div>
 				<img src="img/logo.png" class="splashScreenlogo">
 				<div style="display: inline; margin-top: 25px;">
-					<p class="RETROtxt">Project Controlling System</p>
+					<p class="RETROtxtLoadingScreen">Project Controlling System</p>
 				</div>
 			</div>
 			<div class="loadingOverlay">
