Alle funtzt nun, es gibt nur einen bug der lässt sich aber nicht beheben!

--- a/war/ProjectControllingSystem.html
+++ b/war/ProjectControllingSystem.html
@@ -139,8 +139,8 @@
 			</div>
 			<table class="treeTables" id="tableTree">
 				<tr>
-					<th class="treeCell"><div id="tree_filter_out"></div></th>
-					<th class="treeCell"><div id="tree_filter_in"></div></th>
+					<th class="treeCell"><div id="tree_filter_out" class="dijiCustomTree"></div></th>
+					<th class="treeCell"><div id="tree_filter_in" class="dijiCustomTree"></div></th>
 				</tr>
 			</table>
 		</div>
